Just fixed the dropdown from not showing well on iOS

--- a/imports/client/styles/components/_form.scss
+++ b/imports/client/styles/components/_form.scss
@@ -35,6 +35,7 @@
 }
 
 .form-input {
+    -webkit-appearance: none; //this removes glossy appearance on iOS
     background: $verydark-grey;
     width: 100%;
     padding: 12px 20px;
@@ -44,6 +45,7 @@
     font-weight: 200;
     color: $secondaryfontcolor;
 }
+
 
 
 .form-inlineelements {
@@ -61,3 +63,4 @@
 .screenbackground {
     background: $verydark-grey;
 }
+
